<resources>
    <string name="app_name">Date Trivia</string>
    <string name="content_description">Calendar Image</string>
    <string name="app_author">\@JDVilaCodes</string>
    <string name="year_facts">In The Year&#8230;</string>
    <string name="birthday_facts">On Your Birthday</string>
    <string name="surprise_me">Surprise Me!</string>
    <string name="year_instructions">Enter\nYear\nBelow</string>
    <string name="birthday_instructions">Enter\nBirthday\nBelow</string>
    <string name="year_hint">yyyy</string>
    <string name="month_hint">mm</string>
    <string name="day_hint">dd</string>
    <string name="slash">/</string>
    <string name="submit_button">Submit</string>
    <string name="go_back_button">Go Back</string>
    <string name="loading_dialog">Loading 📆&#8230;</string>
    <string name="number_object">number_object</string>
    <string name="sending_activity">sending_activity</string>
    <string name="month">month</string>
    <string name="day">day</string>
    <string name="year">year</string>
    <string name="about_this_app_title">About This App</string>
    <string name="font_family_title">sans-serif-black</string>
    <string name="font_family_body">sans-serif-light</string>
    <string name="about_this_app_body">This Android App utilizes date facts from the NumbersApi.com website, allowing
        the user three fun options for receiving random facts about a particular date from the year
        1 A.D., to the current year:\n\n
        \u25CF <u>In The Year</u>: will pull a random fact about a day from the year entered\n\n
        \u25CF <u>On Your Birthday</u>: will pull a random fact about a day from the month and date
        entered - try with your own Birth Date!\n\n
        \u25CF <u>Surprise Me!</u>: will pull a random fact about a random day from a random year!\n\n
        <b>Tech Stack:</b>\n\n
        \u25CF written in Java (with native Android Code)\n\n
        \u25CF connects to JSON endpoints with Retrofit2 Library\n\n
        \u25CF built with CardViews and ConstraintLayout\n\n
        \u25CF tested with JUnit4 unit tests\n
        </string>
</resources>
